--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 body {
-  font-size: 14px;
+  font-size: 15px;
   width: 400px
 }
 button {
@@ -17,15 +17,17 @@ button {
 div {
   width: 400px;
   background: rgba(196,196,196,1);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   overflow: hidden;
 }
 .invitem {
+  border: 5px;
+  border-radius: 5px;
   height: 60px;
   width: 60px;
   margin: 0px;
   font-size: 200%;
   border-color: white;
+  opacity: 1;
 }
 .invblock {
   width: 190px;
