--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 body {
   font-size: 15px;
-  width: 400px
+  width: 400px;
 }
 button {
   border-radius: 5px;
@@ -15,6 +15,10 @@ button {
   overflow: hidden;
 }
 div {
+  border-radius: 5px;
+  border-color: black;
+  border-width: 1px;
+  border-style:groove;
   width: 400px;
   background: rgba(196,196,196,1);
   overflow: hidden;
