--- a/style.css
+++ b/style.css
@@ -2,8 +2,18 @@
   box-sizing: border-box;
 }
 body {
-  font: 1.2em "Times New Roman", serif;
+  font: "Times New Roman", serif;
   width: 400px;
+}
+hr {
+  border-top: 1px solid black;
+  border: 1% solid black;
+  margin-top: 1px;
+  margin-bottom: 1px;
+}
+p{
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 button {
   font: bold 13px "URW Palladio L", serif;
@@ -39,7 +49,7 @@ div {
   box-sizing: border-box;
 }
 .dialogblock {
-  height: 300px;
+  height: 250px;
   overflow: auto;
   box-sizing: border-box;
 }
@@ -48,4 +58,14 @@ div {
   height: 100px;
   overflow: auto;
   box-sizing: border-box;
+}
+.playermenuinventory{
+  font-weight:bold;
+}
+.dialogtitle{
+  font-weight:bold;
+}
+
+.playermenu{
+  font-weight:bold;
 }
