--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ div {
   border-color: rgb(133, 133, 133);
 }
 .invblock {
+  position:fixed;
   width: 190px;
   height: 180px;
   box-sizing: border-box;
@@ -68,4 +69,21 @@ div {
 
 .playermenu{
   font-weight:bold;
+}
+
+.messageblock{
+  position:absolute;
+  left: 100px;
+  top: 250px;
+  width: 208px;
+  height: 180px;
+}
+
+.messagemenu{
+  font-weight:bold;
+}
+
+.messagetext{
+  height:100px;
+  overflow: auto;
 }
