--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
   box-sizing: border-box;
 }
 body {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;      
   font: "Times New Roman", serif;
   width: 400px;
 }
