--- a/style.css
+++ b/style.css
@@ -114,9 +114,35 @@ button {
   border-color: rgb(133, 133, 133);
 }
 
-.healthbar{
-  height: 15px;
-  border: 25px;
-  border-radius: 25px;
+progress{
+  height: 17px;
+  border-radius: 5px;
   background-color: antiquewhite;
+}
+
+progress::-webkit-progress-value{
+  background-color:rgb(0, 196, 0);
+  height: 12px;
+}
+
+progress::-webkit-progress-bar{
+  background-color:whitesmoke;
+  border-radius: 1px;
+  border-style:inset;
+}
+
+.hunger::-webkit-progress-value{
+  background-color:orange;
+}
+
+.stress::-webkit-progress-value{
+  background-color:rgb(255, 0, 0);
+}
+
+.poison::-webkit-progress-value{
+  background-color:rgb(255, 0, 0);
+}
+
+.energy::-webkit-progress-value{
+  background-color:yellow;
 }
