--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ button {
 }
 
 .rpsblock {
-  position: absolute;
+  position: fixed;
   top: 100px;
 }
 
@@ -120,7 +120,7 @@ progress{
 
 progress::-webkit-progress-value{
   background-color:rgb(0, 196, 0);
-  height: 12px;
+  height: 13px;
 }
 
 progress::-webkit-progress-bar{
