--- a/style.css
+++ b/style.css
@@ -120,13 +120,13 @@ progress{
 
 progress::-webkit-progress-value{
   background-color:rgb(0, 196, 0);
-  height: 13px;
+  height: 10px;
 }
 
 progress::-webkit-progress-bar{
   background-color:whitesmoke;
   border-radius: 1px;
-  border-style:inset;
+  border-style:groove;
 }
 
 .hunger::-webkit-progress-value{
@@ -143,4 +143,7 @@ progress::-webkit-progress-bar{
 
 .energy::-webkit-progress-value{
   background-color:yellow;
+  border-style: groove;
+  border-color: black;
+  border-width: 1px;
 }
