--- a/style.css
+++ b/style.css
@@ -119,14 +119,15 @@ progress{
 }
 
 progress::-webkit-progress-value{
+  
   background-color:rgb(0, 196, 0);
-  height: 10px;
 }
 
 progress::-webkit-progress-bar{
+  border-style: groove;
+  border-color: black;
+  border-width: 1px;
   background-color:whitesmoke;
-  border-radius: 1px;
-  border-style:groove;
 }
 
 .hunger::-webkit-progress-value{
@@ -142,8 +143,5 @@ progress::-webkit-progress-bar{
 }
 
 .energy::-webkit-progress-value{
-  background-color:yellow;
-  border-style: groove;
-  border-color: black;
-  border-width: 1px;
+  background-color:rgb(233, 71, 255);
 }
