--- a/style.css
+++ b/style.css
@@ -50,6 +50,8 @@ button {
   height: 180px;
 }
 
+
+
 #MessageBackground {
   top: 0px;
   position: absolute;
@@ -80,24 +82,34 @@ button {
   top: 100px;
 }
 
-#InventoryBlock {  
+#InventoryBlock {
   width: 190px;
-  height: 180px;
+  height: 34px;
   box-sizing: border-box;
+  -webkit-transition: height 0.3s, -webkit-transform 0.3s;
+  transition: height 0.3s, transform 0.3s;
 }
 
-#LoadButton, #SaveButton{
-  display:none;
+#InventoryBlock:hover {
+  height: 180px;
 }
-#LoadSave:hover > button  {
-  display:block;
+
+#LoadSave:hover {
+  height: 100px;
 }
 
 #LoadSave {
   width: 190px;
+  height: 34px;
+  -webkit-transition: height 0.3s, -webkit-transform 0.3s;
+  transition: height 0.3s, transform 0.3s;
 }
 
-#PlayerMenuInventory, #PlayerMenu, #DialogTitle, #MessageMenu, #LoadSaveMenu {
+#PlayerMenuInventory,
+#PlayerMenu,
+#DialogTitle,
+#MessageMenu,
+#LoadSaveMenu {
   font-weight: bold;
 }
 
@@ -119,40 +131,51 @@ button {
   border-color: rgb(133, 133, 133);
 }
 
-progress{
+progress {
   height: 17px;
   border-radius: 5px;
   background-color: antiquewhite;
 }
 
-progress::-webkit-progress-value{
-  
-  background-color:rgb(0, 196, 0);
+progress::-webkit-progress-value {
+
+  background-color: rgb(0, 196, 0);
 }
 
-progress::-webkit-progress-bar{
+progress::-webkit-progress-bar {
   border-style: groove;
   border-color: black;
   border-width: 1px;
-  background-color:whitesmoke;
+  background-color: whitesmoke;
 }
 
-.hunger::-webkit-progress-value{
-  background-color:orange;
+.hunger::-webkit-progress-value {
+  background-color: orange;
 }
 
-.stress::-webkit-progress-value{
-  background-color:rgb(255, 0, 0);
+.stress::-webkit-progress-value {
+  background-color: rgb(255, 0, 0);
 }
 
-.poison::-webkit-progress-value{
-  background-color:rgb(255, 0, 0);
+.poison::-webkit-progress-value {
+  background-color: rgb(255, 0, 0);
 }
 
-.energy::-webkit-progress-value{
-  background-color:rgb(233, 71, 255);
+.energy::-webkit-progress-value {
+  background-color: rgb(233, 71, 255);
 }
 
-#Version{
+#Version {
   position: relative;
+  -webkit-transition: width 2s, height 2s, color 2s, -webkit-transform 2s;
+  transition: width 2s, height 2s, color 2s, transform 2s;
+}
+
+#Version:hover {
+  color: brown;
+  color: #c300ff;
+  width: 200px;
+  height: 200px;
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
