--- a/style.css
+++ b/style.css
@@ -50,8 +50,6 @@ button {
   height: 180px;
 }
 
-
-
 #MessageBackground {
   top: 0px;
   position: absolute;
@@ -84,7 +82,7 @@ button {
 
 #InventoryBlock {
   width: 190px;
-  height: 34px;
+  height: 33px;
   box-sizing: border-box;
   -webkit-transition: height 0.3s, -webkit-transform 0.3s;
   transition: height 0.3s, transform 0.3s;
@@ -100,7 +98,7 @@ button {
 
 #LoadSave {
   width: 190px;
-  height: 34px;
+  height: 33px;
   -webkit-transition: height 0.3s, -webkit-transform 0.3s;
   transition: height 0.3s, transform 0.3s;
 }
@@ -111,6 +109,7 @@ button {
 #MessageMenu,
 #LoadSaveMenu {
   font-weight: bold;
+  font-size: 13px;
 }
 
 .invitem {
